# dubplate-special

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  Dockerfile  Dockerfile-celery  Makefile  README.md  codex_task.txt  docker-compose.yml  entrypoint.sh  env.example  plan.md  pyproject.toml  pytest.ini  requirements.txt  ruff.toml  task.md  vk.py
.github/workflows/: deploy_dev.yml  ruff.yml
api/: apps.py  serializers.py  urls.py  views.py
apps/accounts/: admin.py  models.py  services.py  urls.py
apps/accounts/migrations/: 0001_initial.py  0002_smsverification.py  0003_alter_user_phone.py  0004_alter_user_options.py
apps/core/: admin.py  managers.py  middleware.py  models.py  storage.py  utils.py  views.py
apps/core/migrations/: 0001_initial.py
apps/orders/: admin.py  models.py
apps/orders/migrations/: 0001_initial.py
apps/records/: admin.py  apps.py  constants.py  forms.py  managers.py  models.py  signals.py  urls.py  validators.py  views.py
apps/records/admin/: __init__.py  actions.py  inlines.py  mixins.py  record_admin.py
apps/records/constants/: forms.py
apps/records/forms/: __init__.py  helpers.py  mixins.py  record_form.py  validators.py
apps/records/migrations/: 0001_initial.py  0002_track_youtube_url.py  0003_alter_order_options_order_notes_order_status_and_more.py  0003_alter_record_barcode.py  0003_alter_record_barcode_alter_record_catalog_number.py  0003_track_audio_file.py  0004_alter_order_options_remove_order_notes_and_more.py  0004_alter_record_catalog_number.py  0004_remove_orderitem_order_remove_orderitem_record_and_more.py  0005_alter_format_name_alter_genre_name_alter_style_name.py  0005_alter_track_options_record_is_expected_and_more.py  0005_track_audio_file.py  0005_track_file.py  0006_seed_presets.py  (+40 more)
config/: __init__.py  asgi.py  celery.py  logging.py  settings.py  urls.py  wsgi.py
scripts/: start_youtube_session_ui.sh
services/: discogs_service.py
specs/001-youtube-track-audio-enrichment/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
templates/: base.html
templates/admin/: base_site.html
templates/records/: import_by_barcode.html  record_detail.html  record_list.html
tests/: __init__.py  conftest.py  test_audio_downloader.py  test_discogs_import_errors.py  test_discogs_payload_adapter.py  test_discogs_record_source.py  test_discogs_structured_formats.py  test_project_logging.py  test_record_form_discogs.py  test_record_form_redeye_url.py  test_record_vocab_and_vk_message.py  test_redeye_bulk_import.py  test_redeye_import.py  test_redeye_listing_scraper.py  test_redeye_service.py  test_redeye_tracks_parser.py  test_vk_post_preview.py  test_vk_schedule.py  test_youtube_audio_enrichment.py
tests/admin/: test_action.py  test_bulk_delete_error_handling.py  test_record_admin_import_sources.py  test_record_admin_structured_formats.py  test_record_admin_track_inline.py  test_youtube_audio_admin.py
tests/records/: test_audio_enrichment_job_models.py  test_discogs_add_enrichment_enqueue.py  test_discogs_update_enrichment_enqueue.py  test_redeye_audio_regression.py
(+113 files in other folders)
