[project]
name = "dubplate-special"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "django==5.1.7",
    "django-ckeditor-5==0.2.17",
    "django-environ>=0.12.0",
    "django-extensions>=4.1",
    "django-filter>=25.1",
    "djangorestframework>=3.16.0",
    "drf-spectacular>=0.28.0",
    "psycopg2-binary>=2.9.10",
    "python3-discogs-client>=2.8",
    "sorl-thumbnail==12.11.0",
]

[dependency-groups]
dev = [
    "django-silk>=5.4.0",
    "pytest>=8.4.0",
    "pytest-django>=4.11.1",
    "pytest-mock>=3.14.1",
]
