[project]
name = "dubplate-special"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "django-ckeditor-5==0.2.17",
    "django-cors-headers>=4.7.0",
    "django-environ>=0.12.0",
    "django-extensions>=4.1",
    "django-filter>=25.1",
    "django-solo>=2.4.0",
    "django==5.1.7",
    "djangorestframework>=3.16.0",
    "drf-spectacular>=0.28.0",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "python3-discogs-client>=2.8",
    "sorl-thumbnail==12.11.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0,<3",
    "playwright>=1.55.0",
    "vk-api>=11.10.0",
]

[dependency-groups]
dev = [
    "django-silk>=5.4.0",
    "faker>=37.4.0",
    "model-bakery>=1.20.5",
    "pytest>=8.4.0",
    "pytest-django>=4.11.1",
    "pytest-mock>=3.14.1",
]
